--- a/src/app/components/task-list/task-list-global.hbs
+++ b/src/app/components/task-list/task-list-global.hbs
@@ -30,7 +30,7 @@
   {{#each this}}
   {{#unless this.isActive}}
   <li class="task-card task-card--{{getCategory this.categoryId}} task-card--{{getPriority this.priority}} task-card--no-border">
-    <section class="task-card__delete-indicator"></section>
+    <section class="task-card__delete-indicator" data-task-id="{{@key}}"></section>
     <section class="task-card__date">{{this.deadline}}</section>
     <section class="task-card__task-info">
       <h3 class="task-card__task-name">{{this.title}}</h3>
