--- a/src/app/components/button/button.less
+++ b/src/app/components/button/button.less
@@ -1,4 +1,5 @@
 .button {
+  display: inline-block;
   .reset-btn;
   padding: 9px 25px;
   font-size: 18px;
@@ -22,7 +23,7 @@
 
   &:hover,
   &:focus {
-    background-color: @mountain-meadow-dark-col; 
+    background-color: @mountain-meadow-dark-col;
   }
   &:active{
     background-color: @deap-sea-col;
@@ -33,19 +34,19 @@
   background-color: @malibu-col;
   &:hover,
   &:focus {
-    background-color: @curious-blue-col; 
+    background-color: @curious-blue-col;
   }
   &:active{
     background-color: @pelorous-col;
   }
-  
+
 }
 
 .button--red {
   background-color: @tomato-col;
   &:hover,
   &:focus {
-    background-color: @dark-coral-col; 
+    background-color: @dark-coral-col;
   }
   &:active{
     background-color: @mahogany-col;
