--- a/src/app/components/modals/modals.less
+++ b/src/app/components/modals/modals.less
@@ -62,7 +62,6 @@
 }
 
 .task-settings-list__item {
-  min-width: 413px;
   padding: 6px 0;
   margin-bottom: 25px;
   border-bottom: 1px solid @categories-list-border-col;
@@ -141,6 +140,10 @@
   display: none;
 }
 
+.task-settings__radio-scroll-wrapper {
+  overflow: scroll;
+}
+
 .task-settings-list__label-circle {
   vertical-align: top;
   margin-right: 3px;
@@ -154,7 +157,7 @@
 
 .task-settings-list__label-text {
   font-size: 16px;
-} 
+}
 
 .task-settings-list__radio:checked + .task-settings-list__label {
   color: #fff;
