--- a/src/assets/less/common/_general.less
+++ b/src/assets/less/common/_general.less
@@ -38,6 +38,14 @@
   margin-bottom: 30px;
 }
 
+
+.screen-heading--mobile {
+  display: none;
+  float: left;
+  margin-bottom: 0;
+  font-size: 32px;
+}
+
 .screen-tint {
   z-index: 5000;
   position: fixed;
@@ -65,8 +73,8 @@
     top: 0;
     transform: translateY(-100%);
     left: 16px;
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     border-bottom: 5px solid @title-bg-col;
@@ -126,4 +134,4 @@
 
 .hidden {
   display: none;
-} 
+}
