--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -9,6 +9,7 @@
 
 // components
 @import "../../app/components/header/header";
+
 @import "../../app/components/tabs/tabs";
 @import "../../app/components/modals/modals";
 @import "../../app/components/notifications/notifications";
@@ -25,3 +26,17 @@
 
 /* common styles */
 @import "common/_general";
+
+/* media */
+@import "common/general-media";
+@import "../../app/components/header/header-media";
+@import "../../app/components/tabs/tabs-media";
+@import "../../app/pages/settings/settings-media";
+@import "../../app/pages/tasks-list/task-list-media";
+@import "../../app/components/modals/modals-media";
+@import "../../app/pages/timer/timer-media";
+
+
+
+
+
