--- a/src/app/pages/settings/settings-categories.hbs
+++ b/src/app/pages/settings/settings-categories.hbs
@@ -1,13 +1,13 @@
 <section class="screen settings-screen">
     <header class="screen-header">
       <div class="main-container">
-        <h1 class="screen-heading">Settings</h1>
-        <h3 class="subtitle">Pomodoros settings</h3>
+        <h2 class="screen-heading">Settings</h2>
+        <h3 class="subtitle subtitle--settings">Pomodoros settings</h3>
         <h3 class="subtitle  hidden">Categories list overview</h3>
-        <ul class="tabs tabs--right tabs--upper list">
-          <li class="tabs__item"><a href='/settings' class="tabs__btn router-link">Pomodoros</a></li>
-          <li class="tabs__item"><a href='/settings/categories' class="tabs__btn tabs__btn--current router-link" >Categories</a></li> 
-        </ul>   
+        <ul class="tabs tabs--right tabs--upper list  tabs--settings">
+          <li class="tabs__item"><a href="/settings" class="tabs__btn tabs__btn--current tabs__btn--active router-link">Pomodoros</a></li>
+          <li class="tabs__item"><a href='/settings/categories' class="tabs__btn router-link" >Categories</a></li>
+        </ul>
       </div>
     </header>
     <section class="screen-body">
@@ -20,7 +20,7 @@
             <li class="categories-settings__list-item circled list">Sport</li>
             <li class="categories-settings__list-item circled list">Other</li>
           </ul>
-          <a href="/task-list" class="button button--blue router-link">Go to Tasks</a>
+          <a href="/task-list" class="button button--blue pom-settings--button router-link">Go to Tasks</a>
         </section>
       </div>
     </section>
