--- a/src/app/pages/tasks-list/tasks-list.less
+++ b/src/app/pages/tasks-list/tasks-list.less
@@ -7,7 +7,7 @@
   text-align: center;
 
   &--compact {
-   padding-top: 80px; 
+   padding-top: 80px;
   }
 }
 
@@ -25,7 +25,7 @@
   max-width: 850px;
 
   &--done {
-    margin-bottom: 135px;  
+    margin-bottom: 135px;
   }
 }
 
@@ -39,7 +39,7 @@
 
 .task-list {
   margin-bottom: 30px;
-  
+
   &--hobby {
     border-color: @amethyst;
   }
@@ -62,7 +62,10 @@
   vertical-align: middle;
   margin-left: 18px;
   cursor: pointer;
-  &:after { 
+  &--header {
+    margin-left: 8px;
+  }
+  &:after {
     font-family: "Icon";
     font-weight: 400;
     content: "\e900";
@@ -73,11 +76,13 @@
 
 
 .task-card {
+  display: flex;
+  justify-content: flex-start;
   background-color: #fff;
   margin-bottom: 9px;
   border-left: 9px solid red;
   font-size: 0;
-  box-shadow: 0px 2px  10px 0px #222;
+  box-shadow: 0px 2px 10px 0px #222;
   .clearfix;
 
   // status/progress
@@ -127,16 +132,16 @@
 
   //priority
   &--urgent-priority {
-    .task-card__task-name{
+    .task-card__task-name {
       color: @urgent-prior-text;
     }
-    .task-card__start{
+    .task-card__start {
       text-decoration: none;
-      background-color:  @tomato-col;
+      background-color: @tomato-col;
       &:hover,
       &:focus,
       &:active {
-        background-color: darken( saturate(@tomato-col, 10%), 9%);
+        background-color: darken(saturate(@tomato-col, 10%), 9%);
       }
       &--disabled {
         &:hover,
@@ -149,15 +154,15 @@
     }
   }
   &--high-priority {
-    .task-card__task-name{
+    .task-card__task-name {
       color: @high-prior-text;
     }
-    .task-card__start{
+    .task-card__start {
       background-color: @yellow-orange-col;
       &:hover,
       &:focus,
       &:active {
-        background-color: darken( saturate(@yellow-orange-col, 10%), 9%);
+        background-color: darken(saturate(@yellow-orange-col, 10%), 9%);
       }
       &--disabled {
         &:hover,
@@ -170,10 +175,10 @@
     }
   }
   &--middle-priority {
-    .task-card__task-name{
+    .task-card__task-name {
       color: @middle-prior-text-col;
     }
-    .task-card__start{
+    .task-card__start {
       background-color: @gorse;
       &:hover,
       &:focus,
@@ -191,15 +196,15 @@
     }
   }
   &--low-priority {
-    .task-card__task-name{
+    .task-card__task-name {
       color: @mountain-meadow-col;
     }
-    .task-card__start{
+    .task-card__start {
       background-color: @mountain-meadow-col;
       &:hover,
       &:focus,
       &:active {
-        background-color: darken( saturate(@mountain-meadow-col, 10%), 9%);
+        background-color: darken(saturate(@mountain-meadow-col, 10%), 9%);
       }
       &--disabled {
         &:hover,
@@ -221,7 +226,7 @@
       display: inline-block;
     }
   }
-  
+
 }
 
 .task-card__delete-indicator  {
@@ -232,7 +237,7 @@
   margin-right: 17px;
   vertical-align: top;
   cursor: pointer;
-  
+
   &::after {
     position: absolute;
     width: 100%;
@@ -252,6 +257,7 @@
 }
 
 .task-card__date {
+  align-self: center;
   display: inline-block;
   padding: 0 35px 0 25px;
   font-size: 11px;
@@ -259,7 +265,7 @@
   color: @dark-gray-col;
   text-transform: uppercase;
   vertical-align: middle;
-  text-align: center;  
+  text-align: center;
   min-width: 95px;
 }
 
@@ -268,7 +274,7 @@
   font-family: "PT Sans";
   font-weight: 700;
   font-size: 27px;
-  
+
 }
 
 .task-card__mounth {
@@ -277,24 +283,33 @@
 }
 
 .task-card__task-info {
+  //white-space: nowrap;
   display: inline-block;
   padding: 20px 0;
   vertical-align: middle;
+  overflow: hidden;
 }
 
 .task-card__task-name {
   margin-bottom: 4px;
   font-size: 19px;
   font-weight: 500;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
 }
 
 .tasc-card__task-description {
   font-size: 15px;
   color: @gray-col;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .task-card__buttons {
-  float: right;
+  margin-left: auto;
   display: flex;
   height: 87px;
 }
@@ -349,9 +364,9 @@
 
   &::after {
     position: absolute;
-    top: 50%;    
-    left: 50%;    
-    transform: translate(-50%, -50%);    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     content: '\e913';
     color: #fff;
     font-size: 48px;
@@ -382,12 +397,12 @@
 
 .task-card__estimation-value {
   position: absolute;
-  top: 50%;    
-  left: 50%;    
-  transform: translate(-50%, -50%);      
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 22px;
   color: #fff;
-  font-family: 'PT Sans';    
+  font-family: 'PT Sans';
   font-weight: 700;
 }
 
@@ -414,8 +429,9 @@
   }
 }
 .global-list__tabs-wrapper {
-  .clearfix;  
+  .clearfix;
   margin-bottom: 33px;
+  margin-top: -25px;
 }
 
 .task-list--categorized {
@@ -471,7 +487,7 @@
       &::after {
         width: 93%;
       }
-    } 
+    }
   }
 }
 
@@ -499,7 +515,7 @@
   position: absolute;
   top: 4px;
   left: 4px;
-  
+
   width: 9px;
   height: 9px;
   border: 2px solid @madison-col;
@@ -513,7 +529,7 @@
   text-transform: uppercase;
   margin: 0 0 13px 13px;
 
-} 
+}
 
 .task-list__heading {
   &--hobby {
