--- a/src/app/components/modals/modals-media.less
+++ b/src/app/components/modals/modals-media.less
@@ -18,4 +18,9 @@
   .task-settings-list__item-scrollable {
     padding-bottom: 0;
   }
+
+  .task-settings__radio-scroll-wrapper {
+    overflow-x: scroll;
+  }
+
 }
