--- a/src/app/components/task-list/task-list-done.hbs
+++ b/src/app/components/task-list/task-list-done.hbs
@@ -1,4 +1,3 @@
-{{log this}}
 {{#each this}}
   <ul class="task-list list">
     <li class="task-card task-card--{{getCategory this.categoryId}} task-card--{{getPriority this.priority}} task-card--done">
@@ -9,7 +8,7 @@
         <p class="tasc-card__task-description">{{this.description}}</p>
       </section>
       <section class="task-card__buttons">
-        <span class="task-card__start task-card__start--disabled link">
+        <span class="task-card__goToTimer task-card__start--disabled link">
           <span class="task-card__estimation-value">{{this.estimation}}</span>
         </span>
       </section>
