--- a/src/app/components/task/task.hbs
+++ b/src/app/components/task/task.hbs
@@ -10,6 +10,6 @@
       <button class="task-card__button task-card__button--to-daily hidden"></button>
       <button class="task-card__button task-card__button--edit modal-button" data-modal-action="modal-open-edit"></button>
     </section>
-    <a href='/timer' class="task-card__start link"></a>
+    <a href='/timer' class="task-card__goToTimer link"></a>
   </section>
 </li>
