--- a/src/app/pages/tasks-list/tasks-list.less
+++ b/src/app/pages/tasks-list/tasks-list.less
@@ -135,7 +135,7 @@
     .task-card__task-name {
       color: @urgent-prior-text;
     }
-    .task-card__start {
+    .task-card__goToTimer {
       text-decoration: none;
       background-color: @tomato-col;
       &:hover,
@@ -157,7 +157,7 @@
     .task-card__task-name {
       color: @high-prior-text;
     }
-    .task-card__start {
+    .task-card__goToTimer {
       background-color: @yellow-orange-col;
       &:hover,
       &:focus,
@@ -178,7 +178,7 @@
     .task-card__task-name {
       color: @middle-prior-text-col;
     }
-    .task-card__start {
+    .task-card__goToTimer {
       background-color: @gorse;
       &:hover,
       &:focus,
@@ -199,7 +199,7 @@
     .task-card__task-name {
       color: @mountain-meadow-col;
     }
-    .task-card__start {
+    .task-card__goToTimer {
       background-color: @mountain-meadow-col;
       &:hover,
       &:focus,
@@ -349,7 +349,7 @@
     outline: none;
   }
 }
-.task-card__start {
+.task-card__goToTimer {
   position: relative;
   display: inline-block;
   margin-left: 30px;
