--- a/src/app/pages/timer/timer.hbs
+++ b/src/app/pages/timer/timer.hbs
@@ -1,46 +1,29 @@
-<section class="timer-screen">
+<section class="timer-screen" id="timer-screen">
   <header class="screen-header">
     <div class="main-container">
-      <h1 class="screen-heading task-list-screen__screen-heading">1. Creating a New Design</h1>
-      <h3 class="timer-screen__subtitle">Lorem ipsum dolor sit amet consectetur adipiscing</h3>
+      <section id="timer-headings-container">
+
+      </section>
     </div>
   </header>
   <section class="screen-body">
     <section class="timer">
-      <section class="timer__iterations">
-        <span class="timer__iteration-pomodora timer__iteration-pomodora--active"></span>
-        <span class="timer__iteration-pomodora"></span>
-        <span class="timer__iteration-pomodora timer__iteration-pomodora--failed"></span>
+      <section class="timer__iterations" id="timer-iterations-container">
+
       </section>
     </section>
-    <div class="timer__clock in-process">
-      <div class="timer__inner-clock-circle"></div>
-      <p class="timer__clock-text">
-        <span class="timer__break-word hidden">Break</span>
-        <span class="timer__time-indicator hidden">6</span>
-        <span class="timer__min-word hidden">min</span>
-        <span class="timer__notification">Break
-          <br> is over</span>
-        <span class="timer__notification hidden">Let's do it</span>
-        <span class="timer__notification hidden">You
-          <br> Completed
-          <br> Task</span>
-      </p>
+    <div class="timer__clock in-process" id="timer-clock">
+
     </div>
-    <section class="timer__buttons hidden">
-      <button class="button button--green">Start</button>
+
+    <section class="timer__buttons" id="timer-buttons-container">
+
     </section>
-    <section class="timer__buttons hidden">
-      <button class="button button--red">Fail Pomodora</button>
-      <button class="button button--green">Finish Pomodora</button>
-    </section>
-    <section class="timer__buttons">
-      <button class="button button--green">Start Pomodora</button>
-      <button class="button button--blue">Finish Task</button>
-    </section>
+
     <section class="screen-arrows">
       <a href="#" class="screen-arrow screen-arrow--left"></a>
       <a href="#" class="screen-arrow screen-arrow--right"></a>
     </section>
   </section>
+
 </section>
