--- a/src/app/pages/tasks-list/task-list-media.less
+++ b/src/app/pages/tasks-list/task-list-media.less
@@ -3,7 +3,7 @@
     padding: 23px 0;
   }
 
-  .task-card__start {
+  .task-card__goToTimer {
     width: 80px;
     height: 92px;
     margin-left: 14px;
@@ -40,7 +40,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .task-card__start {
+  .task-card__goToTimer {
     width: 70px;
     margin-left: 10px;
   }
