--- a/src/app/components/timer/timer-clock.hbs
+++ b/src/app/components/timer/timer-clock.hbs
@@ -1,4 +1,9 @@
+<!--<div class="timer__circle_wrapper">-->
 <div class="timer__inner-clock-circle"></div>
+<div class="timer__circle-right-part"></div>
+<div class="timer__circle-hider"></div>
+
+<!--</div>-->
 <p class="timer__clock-text">
   <span class="timer__break-word hidden">Break</span>
   <span class="timer__time-indicator hidden">6</span>
