--- a/src/app/pages/timer/timer.less
+++ b/src/app/pages/timer/timer.less
@@ -28,7 +28,6 @@
     margin-right: 0;
   }
 
-
   &--active {
     background: url("/fill tomato.svg") no-repeat center;
   }
@@ -94,15 +93,106 @@
   }
 }
 
+.timer__circle_wrapper {
+}
+
+.timer__circle-hider {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(-136deg);
+  border-radius: 50%;
+  border: 43px solid transparent;
+  border-right-color: red;
+  border-top-color: red;
+  width: 243px;
+  height: 248px;
+  animation: circleHiderAnimation 10s infinite linear;
+}
+
 .timer__inner-clock-circle {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotate(-135deg);
   border-radius: 50%;
-  border: 38px solid @nepal-col;
+  border: 38px solid transparent;
+  border-right-color: #8da5b8;
+  border-top-color: #8da5b8;
   width: 240px;
   height: 240px;
+  animation: timerRotatingPart 10s infinite linear;
+
+}
+
+.timer__circle-right-part {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  border-radius: 50%;
+  border: 38px solid transparent;
+  border-right-color: @nepal-col;
+  border-top-color: @nepal-col;
+  width: 240px;
+  height: 240px;
+  animation: timerRightPart 10s infinite linear;
+}
+
+@keyframes timerRotatingPart {
+  0% {
+    transform: translate(-50%, -50%) rotate(-135deg);
+  }
+
+  50% {
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(225deg);
+  }
+}
+
+@keyframes timerRightPart {
+  100% {
+    border-right-color: @nepal-col;
+    border-top-color: @nepal-col;
+  }
+  50% {
+    border-right-color: @nepal-col;
+    border-top-color: @nepal-col
+  }
+
+  49.9% {
+    border-right-color: transparent;
+    border-top-color: transparent;
+  }
+
+  0% {
+    border-right-color: transparent;
+    border-top-color: transparent;
+  }
+}
+
+@keyframes circleHiderAnimation {
+  0% {
+    border-right-color: @madison-col;
+    border-top-color: @madison-col;
+  }
+  49.9% {
+    border-right-color: @madison-col;
+    border-top-color: @madison-col
+  }
+
+  50% {
+    border-right-color: transparent;
+    border-top-color: transparent;
+  }
+
+  100% {
+    border-right-color: transparent;
+    border-top-color: transparent;
+  }
 }
 
 .screen-arrows {
@@ -120,7 +210,7 @@
   color: @nepal-col;
   font-size: 40px;
 
-  &:hover{
+  &:hover {
     color: @spray-col;
   }
 
