--- a/src/app/pages/tasks-list/task-list.hbs
+++ b/src/app/pages/tasks-list/task-list.hbs
@@ -16,7 +16,7 @@
         </ul>
         <ul class="tabs  tabs--left tabs--remove list">
           <li class="tabs__item">
-            <button class="tabs__btn  tabs__btn--current" href="#">Select All</button>
+            <button class="tabs__btn  tabs__btn--current">Select All</button>
           </li>
           <li class="tabs__item">
             <button class="tabs__btn">Deselect all</button>
@@ -51,6 +51,7 @@
       </section>
 
       <button class="task-list-screen__global-list-toggler">Global list </button>
+
       <section class="global-list">
 
       </section>
