--- a/src/app/pages/timer/timer-media.less
+++ b/src/app/pages/timer/timer-media.less
@@ -14,12 +14,18 @@
   }
 
   .timer__inner-clock-circle {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    border: 38px solid @nepal-col;
+    border-width: 38px ;
+    width: 195px;
+    height: 195px;
+  }
+   .timer__circle-right-part {
+     border-width: 38px ;
+     width: 195px;
+     height: 195px;
+   }
+
+  .timer__circle-hider {
+    border-width: 38px ;
     width: 195px;
     height: 195px;
   }
