--- a/src/app/pages/timer/timer.hbs
+++ b/src/app/pages/timer/timer.hbs
@@ -21,7 +21,7 @@
     </section>
 
     <section class="screen-arrows">
-      <a href="#" class="screen-arrow screen-arrow--left"></a>
+      <a href="/task-list" class="screen-arrow screen-arrow--left router-link"></a>
       <a href="#" class="screen-arrow screen-arrow--right"></a>
     </section>
   </section>
