--- a/src/app/components/timer/timer-clock.hbs
+++ b/src/app/components/timer/timer-clock.hbs
@@ -18,7 +18,7 @@
   {{/ifcompare}}
 
   {{#ifcompare this.currentStage 3}}
-    <span class="timer__break-word ">Break</span>
+    <span class="timer__break-word ">Long break</span>
     <span id="timer-time-indicator" class="timer__time-indicator ">6</span>
     <span class="timer__min-word ">min</span>
   {{/ifcompare}}
